# AI-German-to-English-Translator-App

./: .gitignore  README.md  app.py  app.spec  build_app.sh  build_dmg.sh  capture.py  download_opus_model.py  my_app_icon.icns  ocr_translator.py  pyproject.toml  run.sh  test_app.py  test_capture_mss.py  test_ollama_translate.py  widgets.py
models/opus-mt-de-en/: config.json  generation_config.json  tokenizer_config.json
